	- Finally remove all deprecated methods.
	- Re-initialize the WorldsHolder on a reload, as un-registering and re-registering a new holder means all plugins have to check for the new service on every quiery.
	- Prevent null perms getting past the GlobalGroups loader.
	- Fix forgetting sub groups on a manload.
	- Allow 'manucheckp' to notify when superperms reports false but it is really negated.
	- Only output a Data update message if something has changed.
	- Fix loading users with only numerals in their names to be seen as strings.
	- Ignore any sub folders in the Worlds folder which start with a period (fix for storing data in svn respoitories).
	- Throw a better error than 'null' when someone removes all groups from a yml.
	- Stop force removing attachments and let Bukkit handle it's own mess.
	- Change to our own Yaml parsing for globalgroups instead of using the YAMLConfiguration class in bukkit.
	- Fix a cases sensitivity bug in world loading.
	- Stop using the YamlConfiguration in bukkit for our config handling. We can now support periods in world names.
	- Fix GlobalGroups not loading permission nodes.
	- Fix an error with Logging set to 'OFF' triggering a cast exception.
	- No more null errors from corrupt config.yml's.
	- Give a better error when a subgroup is null.
	- Include the GM version when logging errors.
	- Fix Synchronization on adding subgroups (thanks snowleo).
	- Remove info node support from GlobalGroups. It should not have them as GlobalGroups are only permission collections.
	- Change order of data in Users.yml to [name, Group, SubGroup, Permissions, Info nodes].
	- Add alphabetically sorted user lists.
	- allWorldsDataList now returns fully mirrored worlds which are not identical mirrors (fixes the /manselect list).
	- Add support for Rcon.
	- Prevent GM commands from being used on CommandBlocks.
	- Clear our attachment map upon a manload so we correctly reconfigure a players new permissions.