@@ -16,7 +16,6 @@ import java.util.logging.Level;
 
 import org.anjocaido.groupmanager.data.Group;
 import org.anjocaido.groupmanager.events.GMGroupEvent;
-import org.anjocaido.groupmanager.events.GroupManagerEventHandler;
 import org.anjocaido.groupmanager.utils.PermissionCheckResult;
 import org.anjocaido.groupmanager.utils.Tasks;
 import org.yaml.snakeyaml.DumperOptions;
@@ -308,7 +307,7 @@ public class GlobalGroups {
 		newGroup(groupToAdd);
 		haveGroupsChanged = true;
 		if (GroupManager.isLoaded())
-			GroupManagerEventHandler.callEvent(groupToAdd, GMGroupEvent.Action.GROUP_ADDED);
+			GroupManager.getGMEventHandler().callEvent(groupToAdd, GMGroupEvent.Action.GROUP_ADDED);
 	}
 
 	/**
@@ -339,7 +338,7 @@ public class GlobalGroups {
 			groups.remove(groupName.toLowerCase());
 			this.setGroupsChanged(true);
 			if (GroupManager.isLoaded())
-				GroupManagerEventHandler.callEvent(groupName.toLowerCase(), GMGroupEvent.Action.GROUP_REMOVED);
+				GroupManager.getGMEventHandler().callEvent(groupName.toLowerCase(), GMGroupEvent.Action.GROUP_REMOVED);
 			return true;
 		}
 		return false;
